"channels-string" = "Channels";
"videos-string" = "Videos";
"no-network-string" = "No network! Pull down to refresh!";
